<resources>
  <string name="app_name">Calories Tracker</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="food_name">Food Name</string>
  <string name="num_servings">Servings</string>
  <string name="calories">Calories</string>
  <string name="remaining_calories">Remaining Calories</string>
  <string name="edit_meal">Edit Meal</string>
</resources>