<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:context=".SecondFragment">

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/button_second"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    app:strokeColor="#000"
    app:strokeWidth="0.5dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/sixteen_margin"
      android:orientation="vertical">

      <TextView
        android:id="@+id/food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_name"
        android:textSize="@dimen/normal_text_size" />

      <TextView
        android:id="@+id/num_servings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_margin"
        android:text="@string/num_servings"
        android:textSize="@dimen/normal_text_size" />

      <TextView
        android:id="@+id/calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_margin"
        android:text="@string/calories"
        android:textSize="@dimen/normal_text_size" />

      <TextView
        android:id="@+id/remaining_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_margin"
        android:text="@string/remaining_calories"
        android:textSize="@dimen/normal_text_size" />

      <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#c0c0c0"
        android:layout_marginTop="@dimen/eight_margin"
        android:layout_marginBottom="@dimen/eight_margin" />

      <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_meal"
        android:textSize="@dimen/normal_text_size"
        android:textAllCaps="false"
        android:layout_gravity="end" />
    </LinearLayout>
  </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>